--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.3",
+    "firebase": "^10.7.1",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-giphy-searchbox": "^1.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
